[project]
name = "wisal-firestore-session"
version = "0.1.1"
description = "Firestore Session Manager for Google ADK"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "google-cloud-firestore",
    "google-cloud-storage<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firestore_session"]
