[project]
name = "firestore-session"
version = "0.1.1"
description = "Firestore Session Manager for Google ADK"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Mohammad Shamma", email = "mshamma@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-adk",
    "google-cloud-firestore",
    "google-cloud-storage<3.0.0",
]

[project.urls]
Homepage = "https://github.com/mohammadshamma/firestore-session"
Repository = "https://github.com/mohammadshamma/firestore-session"
Issues = "https://github.com/mohammadshamma/firestore-session/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "requests",
    "build",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firestore_session"]
